Fix spacing

--- a/src/pageEditor/tabs/editTab/editorNodeConfigPanel/EditorNodeConfigPanel.module.scss
+++ b/src/pageEditor/tabs/editTab/editorNodeConfigPanel/EditorNodeConfigPanel.module.scss
@@ -20,7 +20,7 @@
   // Add a full-bleed background color to the header to create separation
   // https://github.com/pixiebrix/pixiebrix-extension/pull/7662
   margin: -15px -24px 20px;
-  padding: 15px 24px 0;
+  padding: 24px 24px 0;
   background: $field-section-header;
 }
 
